--- a/client/src/components/Products/petFilterStyle.css
+++ b/client/src/components/Products/petFilterStyle.css
@@ -1,22 +1,22 @@
-.pet-selection{
-  margin-bottom: 60px;
+.pet-selection {
+  margin: 4.8rem 0;
 }
-.pets-list{
+.pets-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 10px;
 }
-.pet-item{
+.pet-item {
   position: relative;
   cursor: pointer;
 }
-.category-background{
+.category-background {
   width: 150px;
   border-radius: 50%;
 }
 .category-name,
-.pet-icon{
+.pet-icon {
   position: absolute;
   top: 50%;
   left: 50%;
