--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,15 @@
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +22,43 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* ::-moz-selection {
+  color: white;
+  background: #9b6acb;
+} */
+
+/* ::selection {
+  color: white;
+  background: #9b6acb;
+} */
+
+select,
+button,
+button:focus,
+input,
+input:focus textarea,
+textarea,
+textarea:focus {
+  outline: none;
+  border: none;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+img,
+svg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+  background: transparent;
 }
