--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -59,6 +59,7 @@ transition: all 1s ease-in-out;
     text-align: center;
 }
 .background-image {
+  width: 115%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -71,6 +72,6 @@ transition: all 1s ease-in-out;
 .bone-img{
   width: 25%;
   position: absolute;
-  bottom: 1rem;
-  right: 22rem;
+  bottom: 3rem;
+  right: 20rem;
 }
