--- a/client/src/components/Forms/form.module.css
+++ b/client/src/components/Forms/form.module.css
@@ -42,7 +42,8 @@
   font-size: 0.8rem;
 }
 
-.form__input__product input {
+.form__input__product input,
+.form__input__product select {
   background: #fbfbfb;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
