--- a/client/src/components/Products/ProductSection.css
+++ b/client/src/components/Products/ProductSection.css
@@ -135,7 +135,7 @@
   border-radius: 7px;
   color: white;
   margin-bottom: 1.2rem;
-  background-color: green;
+  background-color: #39ca7f;
   cursor: pointer;
   font-weight: bolder;
   font-size: 1.1rem;
