--- a/client/src/components/Products/ProductSection.css
+++ b/client/src/components/Products/ProductSection.css
@@ -14,6 +14,8 @@
   border-bottom: 1px solid #ccc;
   width: 14rem;
   font-size: 0.8rem;
+  padding: 0;
+  height: 2.5rem;
   outline: none;
 }
 
@@ -140,7 +142,9 @@
   font-weight: bolder;
   font-size: 1.1rem;
 }
-
+.add-to-cart:hover {
+  background-color: #2f8a6f;
+}
 .edit-btn {
   font-size: 1.2rem;
   padding: 0.4rem 0.8rem;
@@ -151,6 +155,10 @@
   background-color: orange;
   cursor: pointer;
   margin-bottom: 1.2rem;
+}
+
+.edit-btn:hover {
+  background-color: #c98820;
 }
 
 .btn-add-product {
@@ -164,4 +172,12 @@
   font-weight: bolder;
   font-size: 1.1rem;
   margin-left: 0.5rem;
+}
+
+.btns {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 4.8rem;
 }
