--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -65,6 +65,10 @@ transition: all 1s ease-in-out;
   font-size: 1.2rem;
 }
 
+.bone-img {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 1024px) {
   html {
     font-size: 80.5%;
