--- a/client/src/components/Products/ProductSection.css
+++ b/client/src/components/Products/ProductSection.css
@@ -128,6 +128,7 @@
   font-weight: bolder;
   font-size: 1.1rem;
   transition: all 0.3s ease-in-out;
+  margin-left: 0.5rem;
 }
 .delete-btn {
   padding: 0.4rem 0.8rem;
@@ -157,12 +158,12 @@
   padding: 0.4rem 0.8rem;
   border: none;
   border-radius: 7px;
-
   color: white;
   background-color: orange;
   cursor: pointer;
   margin-bottom: 1.2rem;
   transition: all 0.3s ease-in-out;
+  margin-left: 0.5rem;
 }
 
 .edit-btn:hover {
@@ -185,7 +186,7 @@
 .btns {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   padding: 0 4.8rem;
 }
