--- a/client/src/components/Products/ProductSection.css
+++ b/client/src/components/Products/ProductSection.css
@@ -29,11 +29,11 @@
   border-radius: 25px;
   outline: gray;
   margin: auto 5px;
-  transition:  all ease-out 2s;
+  transition: all ease-out 2s;
 }
 
-.inputs-section select option{
-  background-color: #DDDDDD;
+.inputs-section select option {
+  background-color: #dddddd;
 }
 
 .products-section {
@@ -197,4 +197,5 @@
   justify-content: center;
   width: 100%;
   padding: 0 4.8rem;
+  margin-top: auto;
 }
