--- a/client/src/components/Products/petFilterStyle.css
+++ b/client/src/components/Products/petFilterStyle.css
@@ -29,7 +29,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #857e7d;
+  background-color: #adadad;
   width: fit-content;
   margin: -42px auto;
   position: absolute;
@@ -250,7 +250,7 @@
   box-shadow: 0 0 0 0.5px #fff;
   transition-duration: 0.3s;
 }
-=======
+
 .background-image {
   width: 100%;
   position: relative;
