--- a/client/src/components/Cart/cartStyle.css
+++ b/client/src/components/Cart/cartStyle.css
@@ -1,28 +1,24 @@
-.products-cart-section{
-
-}
-.cart-products-list{
+.cart-products-list {
   display: flex;
-    flex-direction: column;
-    gap: 15px;
+  flex-direction: column;
+  gap: 15px;
 }
-.cart-product-item{
+.cart-product-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #eee;
   padding: 10px;
 }
-.product-cart-img{
+.product-cart-img {
   width: 100px;
 }
-.add-quality{
+.add-quality {
   display: flex;
   gap: 10px;
   align-items: center;
 }
-.quality-btn{
-
+.quality-btn {
   width: 30px;
   height: 30px;
   border-radius: 6px;
@@ -33,21 +29,23 @@
   color: white;
   line-height: 30px;
 }
-.decrease{
+.decrease {
   background-color: #ff553e;
 }
-.increase{
+.increase {
   background-color: #3eca81;
 }
-.total-cost-holder{
+.total-cost-holder {
   background-color: #eee;
   padding: 25px;
   margin: 10px 0 60px;
   overflow: hidden;
   width: fit-content;
   float: right;
+  display: flex;
+  flex-direction: column;
 }
-.total-cost{
+.total-cost {
   float: right;
   display: flex;
   align-items: center;
@@ -55,7 +53,34 @@
   padding: 0 45px;
   color: #444;
 }
-.total-cost span{
+.total-cost span {
   color: #ff553e;
   font-size: 16px;
+}
+
+.container h3 {
+  margin: 0;
+}
+
+.checkout-btn {
+  padding: 0.4rem 0.8rem;
+  border: none;
+  border-radius: 7px;
+  color: white;
+  margin-top: 1.2rem;
+  background-color: #2caa30;
+  cursor: pointer;
+  font-weight: bolder;
+  font-size: 1.1rem;
+  transition: all 0.3s ease-in-out;
+}
+.checkout-btn:hover {
+  background-color: #2a7e2d;
+}
+
+.cart-not__found {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2.5rem;
 }
